@@ -13,25 +13,29 @@ With the exception of usenet's known features,
 # DevOps Instructions
 This project contains three important modules,
 
-* net.310usenet.core
+### net.usenet\_client.core
 
-  All the core functionallity classes, are herein contained in order to assert
-  the functionality of the project.
+All the core functionallity classes, are herein contained in order to assert
+the functionality of the project.
 
-* net.310usenet.gui
+### net.usenet\_client.gui
 
-  All the Graphical User Interface classes, which are inherited by other
-  javax.swing classes e.g JFrame, JPanel, etc.
+All the Graphical User Interface classes, which are inherited by other
+javax.swing classes e.g JFrame, JPanel, etc.
 
-* net.310usetnet.utils
+### net.usenet\_client.utils
 
-  All utilities classes, additional classes, that don't exactly fit into the
-  core itself, but instead used by the core module.
+All utilities classes, additional classes, that don't exactly fit into the core
+itself, but instead used by the core module.
 
-### Roadmap
+### net.usenet\_client.app
 
-1. Implement the project at all cost disregarding optimization, documentation, testing, etc.
-1. Revision for possible encapsulation, flexibility, and maintnance. Including code readability, renaming variables, methods, classes. It's likely that a new module maybe introduced if and when necessary.
-1. Unit Testing of the modules for quality assurance purposes.
-1. Documentation in adhering to javadoc conventions.
-1. Actual implementation of the program itself.
+The module that contains the application itself, this consists of one file,
+that will be executed as the main-class in the jar file.
+
+## Roadmap
+
+1. First attempt implementation
+1. Code review applying encapsulation, flexibilty and extensibility.
+1. Documentation process
+1. Unit Testing implementation
