@@ -1,2 +1,6 @@
+2016-11-15  Rimack Zelnick  <me@rzelnick.com>
+	* The project is taking a whole new direction
+	* This project is for client-side implementation
+
 2016-11-14  Rimack Zelnick  <me@rzelnick.com>
 	* Initial directory structure
